syntax = "proto3";
package cache;
option go_package = "github.com/xgzlucario/LSM/pb";

message DataBlockEntry {
  repeated bytes keys = 1;
  repeated bytes values = 2;
  bytes types = 3;
}

message DataBlock {
    repeated DataBlockEntry entries = 1;
}

message IndexBlockEntry {
    bytes lastKey = 1;
    uint32 offset = 2;
    uint32 size = 3;
}

message IndexBlock {
    repeated IndexBlockEntry entries = 1;
}

message Footer {
    uint64 indexBlockOffset = 1;
    uint64 indexBlockSize = 2;
    uint64 dataBlockOffset = 3;
    uint64 dataBlockSize = 4;
}